# clang

include/clang/AST/: Decl.h  DeclCXX.h
include/clang/Basic/: Attr.td  AttrDocs.td
include/enumivo/: gen.hpp
include/eosio/: gen.hpp
include/eosio/whereami/: whereami.hpp
lib/AST/: Decl.cpp
lib/CodeGen/: CodeGenModule.cpp
lib/Sema/: SemaDeclAttr.cpp
plugins/: CMakeLists.txt
plugins/enumivo_plugin/: enumivo_autogen.cpp
plugins/eosio_plugin/: CMakeLists.txt  eosio_autogen.cpp
tools/extra/: CMakeLists.txt  compiler_options.hpp.in
tools/extra/enumivo_abigen_tool/: CMakeLists.txt  abi.hpp  enumivo-abigen.cpp.in  eosio-abigen.cpp.in
tools/extra/enumivo_c_tool/: CMakeLists.txt  enumivo-cc.cpp.in  enumivo-cpp.cpp.in  eosio-cc.cpp.in
tools/extra/enumivo_ld_tool/: CMakeLists.txt  enumivo-ld.cpp.in
tools/extra/eosio_c_tool/: eosio-cpp.cpp.in
tools/extra/eosio_ld_tool/: CMakeLists.txt  eosio-ld.cpp.in
tools/extra/include/: compiler_options.hpp.in
